tests/resource/valid/class/assign_with_generic_two_generics.mamba
class MyClass[T, T2]
    def f(x: T) -> T2 => "{x} is something"

def x := MyClass[Int, String]()
