tests/resource/invalid/type/class/incompat_parent_generics.mamba
class SuperClass[B: Int]

class MyClass[A: String]: SuperClass[A]
    def my_fun(x: A) -> A => x
